# LoopDesktop

./: .gitignore  CMakeLists.txt  LoopApp.jucer  package-lock.json  package.json
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/LoopApp.xcodeproj/: project.pbxproj
Builds/MacOSX/LoopApp.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/LoopApp.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h
Source/: Main.cpp
app/: index.html  main.js  package.json  styles.css
native-addons/audio-engine/: audio_engine_wrapper.cpp  audio_engine_wrapper.h  binding.gyp  index.js
native/audio/: AudioEngine.cpp  AudioEngine.h
src/components/: LoopLibrary.js
tests/: test_addon.js
